--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -4,7 +4,7 @@
   <div>
   <br />
    <br />
-   <br />
+    <br />
     <h2>Membros</h2>
     
   </div>
@@ -12,7 +12,7 @@
 
 
   <%= render 'function_user_projects/breadcrumb' %>
-<br />
+
 
  <% if @function_user_projects.empty? %>
     <div class="box_center">
@@ -20,13 +20,13 @@
       <br />
       <br />
       <p class="access_deny">Nenhum usuário está associado a esse projeto. Clique em "Associar" para incluí-lo no projeto.</p>
-      <%= link_to "Associar", new_function_user_project_path, class: 'item green_button' %>
+      <%= link_to "Associar", new_function_user_project_path, class: 'green_button' %>
     </div>
   </div>
  <% else %>
 
 
-   <%= link_to "Associar", new_function_user_project_path, class: 'item green_button' %>
+   <%= link_to "Associar", new_function_user_project_path, class: 'green_button' %>
   <br />
   <br />
   <table>
