--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -24,9 +24,9 @@
   <table>
     <thead>
       <tr>
-        <th width="280">Nome</th>
-        <th width="280">Descrição</th>
-        <th width="280">Ações</th>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th>Ações</th>
       </tr>
     </thead>
 
