--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -10,8 +10,8 @@
 
   <%= render 'sprints/breadcrumb' %>
   </div> 
+
 <div>
-<br />
 <br />
    <% if @sprints.empty? %> 
         <div class="box_center">
@@ -25,7 +25,7 @@
         </div>
    <% else %> 
 
-<br />
+<div class="box_center">
 <% if sprint_status_actived_count? %>
  <%= link_to "Nova sprint", new_sprint_path, class: 'green_button' %>
   <br />
@@ -35,6 +35,7 @@
    <br />
    <br />
 <% end %>
+</div>
 
 <% @sprints.each do |sprint| %>
   
