--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -112,10 +112,9 @@
     <button class="card" onclick="window.location.href='<%= scrumboard_path(@project.id) %>'" id="scrumboards">   
             <%= image_tag("kanban_icon.png") %>
             <div class="description">
-             Acesse o board referente as sprints do projeto <%= @project.name %>.
+              Acesse o board da prints do projeto <%= @project.name %>.
              </div>
-            <p></p>
-            <p></p>
+           <br />
     </button>
 
       <button class="card" onclick="window.location.href='<%= themes_path %>'" id="theme"> 
