--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -2,14 +2,15 @@
 <br />
 <div class="container" id="info_project">
 <br />
+<br />
   <h1>Configurações <%= image_tag("configuracao.png") %> </h1>
   <hr>
 
-    <div class="space_card">
+    <div class="space_card" id="card_session">
       <button class="card" onclick="window.location.href='<%= functions_path %>'">
         <%= image_tag("team_configuration.png") %>
         <div class="description">
-          Configure aqui a posição de cada membro no projeto.
+          Configure a posição de cada membro no projeto.
            <p></p>
            <p></p>
         </div>
